<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/cerrar_sesion"
    android:title="Cerrar sesión"
    android:visible="true"/>
</menu>