<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_busqueda"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_busqueda" />

    <item
        android:id="@+id/nav_ubicacion"
        android:icon="@drawable/ic_baseline_place_24"
        android:title="@string/title_ubicacion" />

    <item
        android:id="@+id/nav_preguntas"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_Perfil" />

</menu>