...
    android:id="@+id/Agregar_Mate"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_agregar_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/title_add_mat"
        android:textSize="24sp"
        android:textStyle="bold"
...
