...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="Cantidad:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContentColeccionEditor" />

    <TextView
        android:id="@+id/textViewIdioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="357dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:onClick="actualizarDatos"
        android:text="@string/boton_actualizar"
        app:layout_constraintBottom_toBottomOf="parent"
...
