...
    <string name="coleccion">Colección</string>
    <string name="tipo_mat">Tipo de material</string>
    <string name="idioma">Idioma</string>
    <string name="cant">Cantidad</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="btn_agregar">Agregar material</string>
    <string name="editar_material">Editar</string>
    <string name="eliminar_material">Eliminar</string>
    <string name="boton_actualizar">Actualizar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="hint_todas">Todas</string>
    <string name="titulo_busc_user">Buscar usuario para cancelacion de reserva</string>
    <string name="texto_busc_user">Ingrese el nombre del usuario</string>
    <string name="btn_busc_user">Buscar usuario</string>
...
